<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/layout_01"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/layout_02"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1">

        <ImageView
            android:id="@+id/imgView_logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/image_logo2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_pw"
            android:textColor="#06060A"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/find_pw_title2"
            android:textColor="#9EA4AE"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_02"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/btn_find_pw"
        app:layout_constraintTop_toBottomOf="@id/layout_01"
        app:layout_constraintVertical_weight="1">

        <EditText
            android:id="@+id/edit_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/edit_shape"
            android:drawableStart="@drawable/icon_id_1x"
            android:drawablePadding="14dp"
            android:gravity="center_vertical"
            android:hint="@string/id_hint"
            android:inputType="text"
            android:paddingStart="22dp"
            android:textColor="#3A3B41"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/edit_shape"
            android:drawableStart="@drawable/icon_name_1x"
            android:drawablePadding="14dp"
            android:gravity="center_vertical"
            android:hint="@string/name_hint"
            android:inputType="text"
            android:paddingStart="22dp"
            android:textColor="#3A3B41"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/edit_shape"
            android:drawableStart="@drawable/icon_email_1x"
            android:drawablePadding="14dp"
            android:gravity="center_vertical"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:paddingStart="22dp"
            android:textColor="#3A3B41"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="8dp"
            android:text="@string/find_pw_error"
            android:textColor="#CB030A"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingBottom="30dp"
                android:text="@string/login_screen"
                android:textColor="#9EA4AE"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txt_find_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:paddingBottom="30dp"
                android:text="@string/find_id"
                android:textColor="#9EA4AE"
                android:textSize="14sp" />

        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/btn_find_pw"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_margin="16dp"
        android:background="@drawable/btn_access_enable"
        android:text="@string/find_pw"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>