<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AuthorizationActivity">

    <Button
        android:id="@+id/btn_setting"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/icon_setting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout_01"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/layout_02"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1"
        tools:layout_editor_absoluteX="0dp">

        <ImageView
            android:id="@+id/imgView_logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/image_logo2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth_title"
            android:textColor="#06060A"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/auth_title2"
            android:textColor="#9EA4AE"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_02"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/btn_certification"
        app:layout_constraintTop_toBottomOf="@id/layout_01"
        app:layout_constraintVertical_weight="1">

        <EditText
            android:id="@+id/edit_authCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/edit_shape"
            android:drawableStart="@drawable/icon_code_1x"
            android:drawablePadding="14dp"
            android:gravity="center_vertical"
            android:hint="@string/auth_hint"
            android:inputType="number"
            android:paddingStart="22dp"
            android:textColor="#3A3B41"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="8dp"
            android:text="@string/code_error"
            android:textColor="#CB030A"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/txt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:paddingBottom="30dp"
            android:text="@string/alreadyAccount"
            android:textColor="#9EA4AE"
            android:textSize="14sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_certification"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_margin="16dp"
        android:background="@drawable/btn_access_enable"
        android:text="@string/OK"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>